--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ font-family: Arial, Helvetica, sans-serif;
     background-position: center;
 }
 .navbar{
-    width: 95%;
+    width: 9git5%;
     margin: auto;
     padding: 25px 0;
     display: flex;
@@ -70,7 +70,7 @@ button{
     margin: 20px 10px;
     border-radius: 10px;
     font-weight: bold;
-    border: 2px solid red;
+    border: transparent;
     background: transparent;
     color: white;
     cursor: pointer;
