--- a/style.css
+++ b/style.css
@@ -6,12 +6,12 @@ font-family: Arial, Helvetica, sans-serif;
 .banner{
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.80),rgba(0,0,0,0.80)),url(background.jpg);
+    background-clip: linear-gradient(rgba(0,0,0,0.80),rgba(0,0,0,0.80)), url(Citybackground.mp4);
     background-size: cover;
     background-position: center;
 }
 .navbar{
-    width: 9git5%;
+    width: 95%;
     margin: auto;
     padding: 25px 0;
     display: flex;
@@ -52,7 +52,7 @@ cursor: pointer;
 .content{
     width: 100%;
     position: absolute;
-    top: 40%;
+    top: 60%;
     transform: translateY(-50%);
     text-align: center;
     color: white;
@@ -68,11 +68,11 @@ button{
     padding: 15px;
     text-align: center;
     margin: 20px 10px;
-    border-radius: 10px;
+    border-radius: 20px;
     font-weight: bold;
-    border: transparent;
+    border: 2px solid white;
     background: transparent;
-    color: white;
+    color: red;
     cursor: pointer;
     position: relative;
     overflow: hidden;
@@ -80,10 +80,10 @@ button{
 }
 
 span{
-background: red;
+background: whitesmoke;
 height: 100%;
 width: 0;
-border-radius: 10px;
+border-radius: 20px;
 position: absolute;
 left: 0;
 bottom: 0;
@@ -95,4 +95,18 @@ button:hover span{
 }
 button:hover{
     border: none;
+}
+
+.banner video{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+}
+
+@media(min-aspect-ratio: 16/9){
+    .banner video{
+        width: 100%;
+        height: auto;
+    }
 }
